--- a/src/home.html
+++ b/src/home.html
@@ -1,71 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        loja celulares
-    </title>
-    <link rel="stylesheet" href="../assets/home.css">
-    <!-- <link rel="stylesheet" href="../assets/index.css"> -->
-     <!-- Bootstrap CSS v5.2.1 -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="../assets/img/apple.png" />
+  <title>Apple</title>
+  <link rel="stylesheet" href="../assets/style.css">
+  <!-- <link rel="stylesheet" href="../assets/index.css"> -->
+  <!-- Bootstrap CSS v5.2.1 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 
 
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark topo"
+    style="background-color: rgb(255, 255, 255); justify-content: center;">
+    <div class="container px-4" style="justify-content: center; align-items: center;">
+      <a class="navbar-brand" href="./home.html">
+        <span> <img src="../assets/img/apple.png" alt="" class="logo"> </span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon">
+        </span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="./home.html"
+              style=" color:#000000; font-size:23px; font-weight: bolder; letter-spacing: 1px;">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./sobre.html"
+              style=" color:#000000; font-size:23px; font-weight: bolder; letter-spacing: 1px; ">Sobre</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contato.html"
+              style=" color:#000000; font-size:23px; font-weight: bolder; letter-spacing: 1px; ">Contato</a>
+          </li>
+        </ul>
+      </div>
+    </div>
 
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                  </li>
-                </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
+
+    <button style="margin: 30px; margin-right: 30px; margin-left: 30px;">
+      <a href="./produtos.html" style="text-decoration:none; color:white; font-weight: bolder">
+        PRODUTOS
+      </a>
+    </button>
+  </nav>
+
+
+  <!-- Bootstrap JavaScript Libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
+    </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
+    </script>
+
+    <div class="total">
+      <div class="slider" x-data="{start: true, end: false}" style="padding-top: 150px;">
+        <div class="slider__content" x-ref="slider"
+          x-on:scroll.debounce="$refs.slider.scrollLeft == 0 ? start = true : start = false; Math.abs(($refs.slider.scrollWidth - $refs.slider.offsetWidth) - $refs.slider.scrollLeft) < 5 ? end = true : end = false;">
+          <div class="slider__item">
+            <img class="slider__image" src="../assets/img/cards/aloe-vera-2631853_1280.jpg" alt="Image">
+            <div class="slider__info">
+              <h2>Babosa</h2>
             </div>
-          </nav>
-    </header>
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="../assets/imgs/lojas.jpg" alt="First slide">
           </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="../assets/imgs/lojas.jpg" alt="Second slide">
+          <div class="slider__item">
+            <img class="slider__image" src="../assets/img/cards/mudaSoja.jpg" alt="Image">
+            <div class="slider__info">
+              <h2>Muda de Soja</h2>
+            </div>
           </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="../assets/imgs/lojas.jpg" alt="Third slide">
+          <div class="slider__item">
+            <img class="slider__image" src="../assets/img/cards/rosas.jpg" alt="Image">
+            <div class="slider__info">
+              <h2>Buque de Rosas</h2>
+            </div>
+          </div>
+          <div class="slider__item">
+            <img class="slider__image" src="../assets/img/cards/persaVioleta.jpg" alt="Image">
+            <div class="slider__info">
+              <h2>Violeta Persa</h2>
+            </div>
+          </div>
+          <div class="slider__item">
+            <img class="slider__image" src="../assets/img/cards/samambaia.jpg" alt="Image">
+            <div class="slider__info">
+              <h2>Samambaia</h2>
+            </div>
+          </div>
+          <div class="slider__item">
+            <img class="slider__image" src="../assets/img/cards/girassol.jpg" alt="Image">
+            <div class="slider__info">
+              <h2>Girassol</h2>
+            </div>
+          </div>
+          <div class="slider__item">
+            <img class="slider__image" src="../assets/img/cards/lavanda.jpg" alt="Image">
+            <div class="slider__info">
+              <h2>Lavanda</h2>
+            </div>
+          </div>
+          <div class="slider__item">
+            <img class="slider__image" src="../assets/img/cards/mudaAlface.jpg" alt="Image">
+            <div class="slider__info">
+              <h2>Muda de Alface</h2>
+            </div>
+          </div>
+          <div class="slider__item">
+            <img class="slider__image" src="../assets/img/cards/tulipaAm.jpg" alt="Image">
+            <div class="slider__info">
+              <h2>Tulipa Amarela</h2>
+            </div>
+          </div>
+          <div class="slider__item">
+            <img class="slider__image" src="../assets/img/cards/cravo.jpg" alt="Image">
+            <div class="slider__info">
+              <h2>Cravo</h2>
+            </div>
           </div>
         </div>
+        <div class="slider__nav" style="display: flex;justify-content: center;">
+          <button class="slider__nav__button"
+            x-on:click="$refs.slider.scrollBy({left: $refs.slider.offsetWidth * -1, behavior: 'smooth'});"
+            x-bind:class="start ? '' : 'slider__nav__button--active'"
+            style="font-family:'Kavivanar'; font-weight: bolder; font-size: 1.5rem;">Anterior</button>
+          <button class="slider__nav__button"
+            x-on:click="$refs.slider.scrollBy({left: $refs.slider.offsetWidth, behavior: 'smooth'});"
+            x-bind:class="end ? '' : 'slider__nav__button--active'"
+            style="font-family:'Kavivanar'; font-weight: bolder; font-size: 1.5rem;">Próximo</button>
+        </div>
       </div>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/3.10.2/cdn.js"></script>
+    </div>
+
+    <div class="col-12 ">
+      <div class="fundo">
+        <div>
+          <p>&#169;2023 - Apple - Kauan Americo</p>
+        </div>
+        <div class="imgTotal">
+          <img src="../assets/img/apple.png" alt="" class='imgIcon' />
+        </div>
+      </div>
+    </div>
+
+      <!-- DEIXAR GUARDADO > HEADER ALEATÓRIO
+      <div>
+      <nav class="top">
+        <img class="logo" src="../assets/img/logo.svg" alt="" />
+        
+        <div class="top2">
+          <div class="separar"> 
+            <div class="texto2">
+              <a href="home.html" target="_blank"> <p>Home</p> </a>
+            </div>
+            <div class="texto2">
+              <a href="produtos.html" target="_blank">Produtos</a>
+            </div>
+          </div>
+
+          <div>
+            <button>
+              GET STARTED
+            </button>
+          </div>
+        </div>
+      </nav>
+    </div>
+
+    <div>
+      <h1 class="tituloProd">oi</h1>
+    </div>-->
 </body>
+
 </html>
