--- a/src/home.html
+++ b/src/home.html
@@ -67,63 +67,63 @@
         <div class="slider__content" x-ref="slider"
           x-on:scroll.debounce="$refs.slider.scrollLeft == 0 ? start = true : start = false; Math.abs(($refs.slider.scrollWidth - $refs.slider.offsetWidth) - $refs.slider.scrollLeft) < 5 ? end = true : end = false;">
           <div class="slider__item">
-            <img class="slider__image" src="../assets/img/cards/aloe-vera-2631853_1280.jpg" alt="Image">
+            <img class="slider__image" src="../assets/img/cards/iphone11.webp" alt="Image">
             <div class="slider__info">
-              <h2>Babosa</h2>
+              <h2>Iphone 11</h2>
             </div>
           </div>
           <div class="slider__item">
-            <img class="slider__image" src="../assets/img/cards/mudaSoja.jpg" alt="Image">
+            <img class="slider__image" src="../assets/img/cards/iphone12.webp" alt="Image">
             <div class="slider__info">
-              <h2>Muda de Soja</h2>
+              <h2>Iphone 12</h2>
             </div>
           </div>
           <div class="slider__item">
-            <img class="slider__image" src="../assets/img/cards/rosas.jpg" alt="Image">
+            <img class="slider__image" src="../assets/img/cards/iphone12mini.webp" alt="Image">
             <div class="slider__info">
-              <h2>Buque de Rosas</h2>
+              <h2>Iphone 12 mini</h2>
             </div>
           </div>
           <div class="slider__item">
-            <img class="slider__image" src="../assets/img/cards/persaVioleta.jpg" alt="Image">
+            <img class="slider__image" src="../assets/img/cards/iphone12promax.webp" alt="Image">
             <div class="slider__info">
-              <h2>Violeta Persa</h2>
+              <h2>Iphone 12 Pro Max</h2>
             </div>
           </div>
           <div class="slider__item">
-            <img class="slider__image" src="../assets/img/cards/samambaia.jpg" alt="Image">
+            <img class="slider__image" src="../assets/img/cards/iphone13.webp" alt="Image">
             <div class="slider__info">
-              <h2>Samambaia</h2>
+              <h2>Iphone 13</h2>
             </div>
           </div>
           <div class="slider__item">
-            <img class="slider__image" src="../assets/img/cards/girassol.jpg" alt="Image">
+            <img class="slider__image" src="../assets/img/cards/iphone13promax.webp" alt="Image">
             <div class="slider__info">
-              <h2>Girassol</h2>
+              <h2>Iphone 13 Pro Max</h2>
             </div>
           </div>
           <div class="slider__item">
-            <img class="slider__image" src="../assets/img/cards/lavanda.jpg" alt="Image">
+            <img class="slider__image" src="../assets/img/cards/iphoneX1.webp" alt="Image">
             <div class="slider__info">
-              <h2>Lavanda</h2>
+              <h2>iphone X</h2>
             </div>
           </div>
           <div class="slider__item">
-            <img class="slider__image" src="../assets/img/cards/mudaAlface.jpg" alt="Image">
+            <img class="slider__image" src="../assets/img/cards/iphoneXR1.webp" alt="Image">
             <div class="slider__info">
-              <h2>Muda de Alface</h2>
+              <h2>Iphone XR</h2>
             </div>
           </div>
           <div class="slider__item">
-            <img class="slider__image" src="../assets/img/cards/tulipaAm.jpg" alt="Image">
+            <img class="slider__image" src="../assets/img/cards/iphone12.webp" alt="Image">
             <div class="slider__info">
-              <h2>Tulipa Amarela</h2>
+              <h2>Iphone 12</h2>
             </div>
           </div>
           <div class="slider__item">
-            <img class="slider__image" src="../assets/img/cards/cravo.jpg" alt="Image">
+            <img class="slider__image" src="../assets/img/cards/iphone13.webp" alt="Image">
             <div class="slider__info">
-              <h2>Cravo</h2>
+              <h2>Iphone 13</h2>
             </div>
           </div>
         </div>
