--- a/src/sobre.html
+++ b/src/sobre.html
@@ -56,15 +56,7 @@
     <div class="col-12 text-center">
       <h1 class="text-dark fw-bold mb-4" style="margin-top: 100px;">Quem somos?</h1>
       <div style="display: flex; align-items: center;">
-        <p style="padding-left: 15%; font-size: 20px;">Aqui você encontrará as mais belas e frescas flores para todas as
-          ocasiões.
-          Somos uma equipe apaixonada por flores e por ajudar nossos clientes a expressarem seus sentimentos através
-          delas. Seja para um presente especial, um casamento, um evento corporativo ou simplesmente para decorar a sua
-          casa, temos uma variedade incrível de flores e arranjos que certamente atenderão às suas necessidades.
-          Além disso, nossa equipe está sempre disponível para ajudá-lo(a) a escolher a melhor combinação de flores e
-          cores para que o seu presente ou evento seja perfeito em todos os aspectos. Aqui na nossa floricultura, você
-          também encontrará acessórios e presentes para complementar o seu arranjo floral, como vasos, cartões e
-          chocolates.</p>
+        <p style="padding-left: 15%; font-size: 20px;"> Bem-vindo à nossa loja de celulares! Oferecemos uma ampla variedade de dispositivos móveis e acessórios. Nossa equipe está pronta para ajudá-lo a encontrar o celular ideal, garantindo sua satisfação. Trabalhamos com marcas renomadas e estamos atualizados com as últimas tendências tecnológicas. Além dos celulares, também oferecemos diversos acessórios para complementar sua experiência. Valorizamos sua satisfação como cliente e oferecemos um serviço pós-venda confiável. Visite-nos para encontrar o celular perfeito para suas necessidades. Nossa equipe de atendimento está disponível para responder suas perguntas e fornecer orientações. Venha à nossa loja e descubra as melhores opções em tecnologia móvel. Esperamos recebê-lo em breve!</p>
         <img src="../assets/img/jimmy.png" alt="" class="desenho">
       </div>
     </div>
